completed order and invoice

--- a/CSM.Client/src/app/order/table/table.component.html
+++ b/CSM.Client/src/app/order/table/table.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1 class="main-heading" routerLink="5">Tables</h1>
+      <h1 class="main-heading">Tables</h1>
     </div>
   </div>
   <div class="row align-items-end">
@@ -13,11 +13,11 @@
           Modern powerful framework
         </mat-card-subtitle>
         <mat-card-actions>
-          <a mat-button href="https://angular.io/docs/ts/latest/" target="_blank">
-            <i class="fa fa-book fa-lg"></i> Docs
+          <a mat-button routerLink="{{table.id}}">
+            <i class="material-icons">edit</i> Edit
           </a>
-          <a mat-button href="https://github.com/angular/angular" target="_blank">
-            <i class="fa fa-github fa-lg"></i> Github
+          <a mat-button *ngIf="table.total > 0" (click)="createNewInvoice(table.id)">
+            <i class="material-icons">monetization_on</i> Pay
           </a>
         </mat-card-actions>
       </mat-card>
