--- a/CSM.Client/src/app/app.component.html
+++ b/CSM.Client/src/app/app.component.html
@@ -7,11 +7,6 @@
          [routerLink]="[item.link]" routerLinkActive="active">
         {{item.label}}
       </a>
-      <a mat-list-item
-         href="https://github.com/tomastrajan/angular-ngrx-material-starter"
-         target="_blank">
-        Github
-      </a>
     </mat-nav-list>
   </mat-sidenav>
 
@@ -60,27 +55,20 @@
           <mat-icon>settings</mat-icon>
         </button>
 
-        <a matTooltip="Project Github Repository"
-           matdTooltipPosition="before"
-           mat-icon-button
-           class="link d-none d-sm-inline"
-           href="https://github.com/tomastrajan/angular-ngrx-material-starter"
-           target="_blank">
-          <i class="fa fa-github fa-2x"></i>
-        </a>
-
       </mat-toolbar>
     </div>
 
-    <div class="content"
-         [@routerTransition]="o.isActivated && o.activatedRoute.routeConfig.path">
+<!-- <div class="content" [@routerTransition]="o.isActivated && o.activatedRoute.routeConfig.path">
       <router-outlet #o="outlet"></router-outlet>
+    </div> -->
+    <div class="content">
+      <router-outlet></router-outlet>
     </div>
 
     <div class="footer">
       <div class="row">
         <div class="col-12 signature">
-          &#169; {{year}} - Tomas Trajan
+          &#169; {{year}} - An
         </div>
       </div>
     </div>
