statistic and manage product

--- a/CSM.Client/src/app/product/manage-product/manage-product.component.scss
+++ b/CSM.Client/src/app/product/manage-product/manage-product.component.scss
@@ -9,6 +9,11 @@
   margin: 0 0 20px 0;
 }
 
+mat-card-actions {
+  margin-left: 0 !important;
+  margin-bottom: 0 !important;
+}
+
 mat-card {
   margin: 0 0 20px 0;
 
